# comet-hs

./: .ghci  CHANGELOG.md  LICENSE  README.md  comet.cabal
lib/: Asterix.hs
test/: test-asterix.hs
