cabal-version:      2.4
name:               comet
version:            0.1.0
synopsis:           Asterix format encoding and decoding library for haskell

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Zoran Bošnjak
maintainer:         zoran.bosnjak@via.si

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Asterix

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base < 5
        , bytestring
        , base16-bytestring
        , QuickCheck

    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite comet-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          test-asterix.hs
    build-depends:
        base < 5
        , comet
        , bytestring
        , base16-bytestring
        , QuickCheck
        , tasty
        , tasty-quickcheck
        , tasty-hunit

